# myth-genericrecorder

./: README.md  pyproject.toml
Examples/: Channels.conf  magewell-2-1-4.conf  magewell-4.conf
src/myth_genericrecorder/: __init__.py  logger.py  main.py  recorder.py  touch.py
