[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myth-genericrecorder"
version = "0.1.0"
description = "MythTV Generic recorder that processes JSON commands and executes external commands"
requires-python = ">=3.8"
dependencies = [
]
authors = [{name = "John Patrick Poet", email = "jpoet@mythtv.org"}]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.scripts]
myth-genericrecorder = "myth_genericrecorder.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["myth_genericrecorder*"]
