[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "myth-genericrecorder"
dynamic = ["version"]
description = "MythTV Generic recorder that processes JSON commands and executes external commands"
requires-python = ">=3.8"
dependencies = [
]
authors = [{name = "John Patrick Poet", email = "jpoet@mythtv.org"}]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.scripts]
myth-genericrecorder = "myth_genericrecorder.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["myth_genericrecorder*"]

[tool.setuptools_scm]
# Presence of this section enables setuptools_scm.
# It will use the latest git tag and append the commit hash if the repo is 'dirty'
# or has commits since the last tag.
